<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Fieldium</string>
    <string name="action_settings">Settings</string>
    <string name="special_offers">Special Offers</string>
    <string name="title_bookings_list">My Bookings</string>
    <string name="title_profile">My Profile</string>
    <string name="about_text">Fieldium</string>
    <string name="notification_problem_no_token">Technical error occurred, may not receive notifications to follow-up your order.\nConatct us from About information</string>
    <string name="refresh">Refresh</string>
    <string name="update_google_play_services">Please update google play services</string>
    <string name="about_us_text">Fieldium player V.1.0\nTradinos UG\nBerlin-Germany</string>
    <string name="info">E-mail: info@fieldium.com\nPhone: (00) 222 666 444\n
Mobile: +1 900 235 2456</string>
    <string name="all_rights_reserved">Fieldium © 2017 All Rights Reserved</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_field_required">This field is required</string>
    <string name="any_time">Any time</string>
    <string name="any_date">Any date</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="received">Approved</string>
    <string name="canceled">Canceled</string>
    <string name="pending">Pending</string>
    <string name="rejected">Declined</string>
    <string name="your_phone_number">Your phone number</string>
    <string name="continue_">Continue</string>
    <string name="enter_verification_code">Enter verification code </string>
    <string name="did_not_receive_code">"Didn\'t receive code?"</string>
    <string name="enter_code_sent_to_phone">Enter the verification code sent to</string>
    <string name="skip_note">In case you didn\'t receive the sms , you can skip to browse the fields.</string>
    <string name="your_name">Your Full Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_address">Your Address</string>
    <string name="delete">Delete</string>
    <string name="please_select_image">Please select an image!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Skip">skip</string>
    <string name="Back">back</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="notes">Notes</string>
    <string name="address_with_dot">Address : </string>
    <string name="note_with_dot">Notes : </string>
    <string name="my_bookings">My Bookings</string>
    <string name="my_notifications">My Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="title_activity_contact_us">Contact Us</string>
    <string name="side_menu_my_contact_us"> Contact us </string>
    <string name="log_out">Logout</string>
    <string name="no_bookings">No Bookings!</string>
    <string name="no_offers">No Special Offers!</string>
    <string name="currancy">currency</string>
    <string name="per_hour">per hour</string>
    <string name="username">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="address">Address</string>
    <string name="msup2">m&#178;</string>
    <string name="games">Games</string>
    <string name="phone">Phone number</string>
    <string name="save">Save</string>
    <string name="send">Send</string>
    <string name="closed">closed</string>
    <string name="update_profile_msg">Your info has been changed ... </string>
    <string name="update_profile_img">Your image has been saved..</string>
    <string name="delete_profile_img">Your image has been deleted..</string>
    <string name="checkout">Checkout</string>
    <string name="done">Done</string>
    <string name="please_wait_while_uploading_finish">please wait while uploading finish</string>
    <string name="choose_Image">Choose an Image</string>
    <string name="take_picture">Take a picture</string>
    <string name="title_activity_pager_">Pager_Activity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="search_hint">Search fields</string>
    <string name="no_search_results">No Results !</string>
    <string name="description">Description</string>
    <string name="error_invalid_phone_number">Invalid phone number</string>
    <string name="invalid_code">Invalid Code</string>
    <string name="invalid_phone">Invlild phone number. </string>
    <string name="invalid_phone_length">The phone number should consist of 9 numbers.  </string>
    <string name="invalid_phone_start">Start the phone number with 5 . </string>
    <string name="title_verification">Register</string>
    <string name="title_complete_registeration">Complete Registration</string>
    <string name="total">Total</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_field">FieldActivity</string>
    <string name="title_activity_field_details">FieldDetailsActivity</string>
    <string name="title_activity_book">BookActivity</string>
    <string name="title_activity_timing">TimingActivity</string>
    <string name="title_activity_check_availability">CheckAvailabilityActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_booking_timing">BookingTimingActivity</string>
    <string name="game">Game</string>
    <string name="city">City</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="find_now">Find now</string>
    <string name="find_best_fields">Find your best fields</string>
    <string name="upcoming_booking">Upcoming booking</string>
    <string name="no_upcoming_user">You don\'t have upcoming booking!!\nDon\'t be lazy book now :)</string>
    <string name="no_upcoming_not_user">You don\'t have booking yet!!\nRegister Now :)</string>
    <string name="previous_bookings">Previous Bookings</string>
    <string name="upcoming_bookings">Upcoming Bookings</string>
    <string name="register_now">Register now</string>
    <string name="search_name_address">Search by name or address</string>
    <string name="start">Start</string>
    <string name="duration">Duration</string>
    <string name="timing">Timing</string>
    <string name="fields">Fields</string>
    <string name="starts_from">Starts from</string>
    <string name="players">players</string>
    <string name="check_availability">Check availability</string>
    <string name="book">Book</string>
    <string name="amenities">Amenities</string>
    <string name="max_capacity">Max capacity</string>
    <string name="open_hours">Open hours</string>
    <string name="available_times">Available Times</string>
    <string name="busy">Busy</string>
    <string name="not_allowed">Not allowed at this time</string>
    <string name="minimum_duration">Minimum duration is</string>
    <string name="min">min</string>
    <string name="your_booking_on">Your booking is on:</string>
    <string name="out_of_range">Out of available range</string>
    <string name="available_range_is_from">Available range is from:</string>
    <string name="to">to:</string>
    <string name="minimum_duration_of">Minimum duration of</string>
    <string name="is">is:</string>
    <string name="from">from:</string>
    <string name="booking">Booking</string>
    <string name="cos_per_hour">Cost per hour</string>
    <string name="select_valid_time">Please select a valid time.</string>
    <string name="confirmation">Confirmation</string>
    <string name="you_about_to_reserve">You are about to reserve:</string>
    <string name="games_interested_in">Games interested in:</string>
    <string name="deactivate_my_account">Deactivate my account</string>
    <string name="deactivate_confirmation">Are you sure that you want to deactivate your account</string>
    <string name="alert">Alert !</string>
    <string name="thanks_for_feedback">Thanks for your feedback , Your Message has been saved .</string>
    <string name="message">Message</string>
    <string name="booking_no">Booking No.</string>
    <string name="status">Status</string>
    <string name="show_company">show company</string>
    <string name="select_game">Select game:</string>
    <string name="no_notifications">No notifications!</string>
    <string name="notifications">Notifications</string>
    <string name="please_select_game">Please select game</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_select_country">Please select country</string>
    <string name="title_activity_setttings">SetttingsActivity</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="country_title">Select your country:</string>
    <string name="next">Next</string>
    <string name="skip_for_now">skip for now</string>
    <string name="Enter_your_code" >Enter your code</string>
    <string name="wrong_number">Wrong number? click to change it.</string>
    <string name="or">or</string>
    <string name="get_new_number" >Get a new one</string>
    <string name="my_vouchers">My vouchers</string>
    <string name="apply_voucher">Apply</string>
    <string name="check_voucher">Check</string>
    <string name="voucher_dialog_title">Insert your voucher code</string>
    <string name="voucher">Voucher</string>
    <string name="subTotal">Sub total</string>
    <string name="discount">Discount</string>
    <string name="free">Free</string>
    <string name="use_voucher">Use voucher</string>
    <string name="days_left">days left</string>
    <string name="type_voucher_code">Type a voucher</string>
    <string name="code">Code:</string>
    <string name="nearest_vouchers">Nearest vouchers</string>
    <string name="value">Value</string>
    <string name="from_hour">From hour</string>
    <string name="to_hour">To hour</string>
    <string name="start_date">Start date</string>
    <string name="expiry_date">Expiry date</string>
    <string name="companies">Companies</string>
    <string name="choose_country">Choose your country</string>
    <string name="go">Go</string>
</resources>