<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parent_panel"
    >
<LinearLayout
    android:id="@+id/form_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:padding="10dp"
        android:text="@string/voucher_dialog_title"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <TextView
        android:id="@+id/voucher_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"
        android:visibility="gone"
        android:textAppearance="@android:style/TextAppearance.Medium"/>


    <EditText
        android:id="@+id/textView_voucher_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:textAppearance="@android:style/TextAppearance.Medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/voucher_cancelButton"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:text="@string/cancel"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/color_primary" />

        <Button
            android:id="@+id/check_voucherButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="0.5"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/check_voucher"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/color_primary" />
    </LinearLayout>
</LinearLayout>

    <ProgressBar
        android:id="@+id/proccess_indicator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"/>
</FrameLayout>