<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_panel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="300dp"
    android:orientation="vertical"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.bluebrand.fieldium.view.other.LanguagesActivity"
    tools:showIn="@layout/activity_languages">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/languages_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="start"
            android:text="@string/language"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/dark_gray" />

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:src="@mipmap/exite"
            android:tint="@color/dark_gray"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_weight="0.5"
        android:gravity="center">

        <RadioGroup
            android:id="@+id/language_radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp">



            <RadioButton
                android:id="@+id/english_setting_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/english"
                android:textColor="@color/dark_gray"
                android:textAppearance="@android:style/TextAppearance.Medium"
              />
            <RadioButton
                android:id="@+id/arabic_setting_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/arabic"
                android:textColor="@color/dark_gray"
                android:textAppearance="@android:style/TextAppearance.Medium"
                />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>

