<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/login_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="horizontal">



        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="480dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:weightSum="1"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView7"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/logo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:id="@+id/editText_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                 />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <EditText
                android:id="@+id/editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/white" />

            <Button
                android:textColor="@color/white"
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_gravity="center_horizontal"
                android:lines="1"
                android:text="@string/action_sign_in"
                android:textSize="18sp"
                android:onClick="onLoginClick"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#02bcd0" />

        </LinearLayout>


    </RelativeLayout>

</LinearLayout>